Valid package name

--- a/Runtime/MM.asmdef
+++ b/Runtime/MM.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.MartinMiclethwaite.MMUnityLibrary",
+    "name": "com.martinmicklethwaite.mm_library",
     "rootNamespace": "MM",
     "references": [],
     "includePlatforms": [],
