--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.MartinMicklethwaite.MMLibrary",
+  "name": "com.martinmicklethwaite.mm_library",
   "version": "1.0.0",
   "displayName": "Unity utils developed by Martin Micklethwaite",
   "description": "Collection of Unity utilities & assets shared across projects",
