--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.martinmicklethwaite.mm_library",
   "version": "1.0.0",
-  "displayName": "Unity utils developed by Martin Micklethwaite",
+  "displayName": "MM's Unity Library",
   "description": "Collection of Unity utilities & assets shared across projects",
   "unity": "6000.0",
   "dependencies": {
